--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
     <li><a href="/hax.html">HAX, card demo</a></li>
   </ul>
   <div class="wrapper">
-    <rename-me need="joy">Some inner text that will render out</rename-me>
-    <word-count>
-      <rename-me need="nothing"><div>You feel much shame.</div></rename-me>
-    </word-count>
+    <mark-the-words>
+      I am a sentence made up of multiple words.
+    </mark-the-words>
   </div>
   <script type="module">
     import "./rename-me.js";
