--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </mark-the-words>
   </div>
   <script type="module">
-    import "./rename-me.js";
+    import "./mark-the-words.js";
     import "@lrnwebcomponents/word-count/word-count.js";
   </script>
 </body>
