fixed backend issues

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <li><a href="/hax.html">HAX, card demo</a></li>
   </ul>
   <div class="wrapper">
-    <mark-the-words>
-      answers = "sentence, multiple">
+    <mark-the-words answers= "sentence, multiple">
       I am a sentence made up of multiple words. Test Test Test
     </mark-the-words>
   </div>
