commit before pull

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <li><a href="/hax.html">HAX, card demo</a></li>
   </ul>
   <div class="wrapper">
-    <mark-the-words answers= "sentence, multiple">
-      I am a sentence made up of multiple words. Test Test Test
+    <mark-the-words answers= "words.,multiple">
+      I am a sentence made up of multiple words.
     </mark-the-words>
   </div>
   <script type="module">
